cleanups (#1600)